# llm-council

./: .env.example  README.md  docker-compose.yml  generate_compose.py  main.py  models.yaml  plan-localNimVllmMultiRoundCouncilRefactor.prompt.md  pyproject.toml  start.sh
backend/: config.py  config_schema.py  council.py  evidence.py  inference.py  main.py  storage.py  test_config_schema.py  test_council_dynamics.py  test_evidence.py  test_inference.py
ctop/: README.md  build_trials_dataframe.py  run_duration_pipeline.py  test_duration_pipeline.py  test_trial_xml_pipeline.py  trial_xml_parser.py
